

[metadata]
name = visutils
keywords=visutils
version = 0.0.1
license = "MIT license",
description = Utilities for data visualisation
long_description = file: README.rst
author = Yngve Mardal Moe & Marie Roald
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/visutils
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:visutils/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 88


